Create custom product page

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -525,5 +525,54 @@
       "send_on": "YYYY-MM-DD",
       "send_on_label": "Send on (optional)"
     }
-  }
+  },
+  "Home": "Home",
+  "Factory": "Factory",
+  "turn_map_into_souvenir": "Turn your map into a souvenir of your adventures",
+  "color_in_each_country_explored": "Color in each country you've explored and create a map that tells your travel story.",
+  "follow_your_journey": "Follow your journey around the world with World Map Factory.",
+  "quick_link": "Quick Link",
+  "home": "Home",
+  "help": "Help",
+  "contact": "Contact",
+  "follow_us": "Follow us",
+  "Colors": "Colors",
+  "Countries": "Countries",
+  "add_to_cart": "Add to cart",
+  "my_cart": "Cart",
+  "checkout": "Checkout",
+  "update": "Update",
+  "empty": "Empty",
+  "our_products": "Our Products",
+  "size": "Size",
+  "cart_title": "Your cart",
+  "cart_empty": "Your cart is empty",
+  "cart_continue_shopping": "Continue Shopping",
+  "cart_remove": "Remove",
+  "cart_subtotal": "Subtotal",
+  "cart_discount": "Discount",
+  "cart_total": "Total",
+  "cart_update": "Update",
+  "cart_checkout": "Checkout",
+  "free_shipping": "Free Shipping",
+  "shipping_estimate": "Shipping Estimate",
+  "cart_product": "Product",
+  "cart_products": "Products",
+  "cart_quantity": "Quantity",
+  "infos": "Infos",
+  "legal_mentions": "Legal mentions",
+  "general_terms_and_conditions": "General terms and conditions",
+  "privacy_policy": "Privacy policy",
+  "refund_policy": "Refund policy",
+  "shipping_policy": "Shipping policy",
+  "contact_send": "Send",
+  "contact_textarea_placeholder": "Your message",
+  "contact_input_placeholder_first_name": "First name",
+  "contact_input_placeholder_last_name": "Last name",
+  "contact_input_placeholder_email": "Email",
+  "contact_speech": "Do you have a question, need help or want to leave us a message? Our team will get back to you as soon as possible!",
+  "from_to": "From",
+  "no_image": "No image",
+  "our_collections": "Our Collections",
+  "all_products": "All Products"
 }
