Add search countries translation for English and French locales

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -533,4 +533,5 @@
   "unfilled_countries": "Unfilled countries",
   "selected_countries": "Selected countries",
   "borders": "Borders",
+  "search_countries": "Search countries",
 }
