--- a/locales/fr.json
+++ b/locales/fr.json
@@ -544,4 +544,5 @@
   "unfilled_countries": "Pays non séléctionnés",
   "selected_countries": "Pays sélectionnés",
   "borders": "Frontières",
+  "search_countries": "Rechercher des pays",
 }
