feat: Add country-specific information to map data

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -534,4 +534,6 @@
   "selected_countries": "Selected countries",
   "borders": "Borders",
   "search_countries": "Search countries",
+  "unfilled_flag": "Fill unselected countries with their flag",
+  "filled_flag": "Fill selected countries with their flag"
 }
