--- a/locales/fr.json
+++ b/locales/fr.json
@@ -122,7 +122,8 @@
         "in_cart_html": "<span class=\"quantity-cart\">{{ quantity }}</span> dans le panier",
         "note": "Voir les règles de quantité",
         "min_of": "Min. {{ quantity }}",
-        "max_of": "Max. {{ quantity }}"
+        "max_of": "Max. {{ quantity }}",
+        "in_cart_aria_label": "Quantité ({{ quantity }} dans le panier)"
       },
       "price": {
         "from_price_html": "À partir de {{ price }}",
@@ -156,6 +157,7 @@
         "load_video": "Lire la vidéo {{ index }} dans la galerie",
         "image_available": "L'image {{ index }} est maintenant disponible dans la galerie"
       },
+      "nested_label": "{{ title }} pour {{ parent_title }}",
       "view_full_details": "Afficher tous les détails",
       "shipping_policy_html": "<a href=\"{{ link }}\">Frais d'expédition</a> calculés à l'étape de paiement.",
       "choose_options": "Choisir des options",
@@ -454,7 +456,7 @@
       "order_number_link": "Numéro de commande {{ number }}",
       "date": "Date",
       "payment_status": "Statut des paiements",
-      "fulfillment_status": "Statut des commandes",
+      "fulfillment_status": "Statut du traitement de la commande",
       "total": "Total",
       "none": "Vous n'avez encore passé aucune commande."
     },
@@ -486,7 +488,7 @@
       "billing_address": "Adresse de facturation",
       "payment_status": "Statut de paiement",
       "shipping_address": "Adresse d'expédition",
-      "fulfillment_status": "Statut des commandes",
+      "fulfillment_status": "Statut du traitement de la commande",
       "discount": "Réduction",
       "shipping": "Expédition",
       "tax": "Taxes",
@@ -536,15 +538,5 @@
       "expanded": "Formulaire de destinataire de carte-cadeau agrandi",
       "collapsed": "Formulaire de destinataire de carte-cadeau réduit"
     }
-  },
-  "colors": "Couleurs",
-  "countries": "Pays",
-  "unselect_all": "Tout désélectionner",
-  "ocean_color": "Couleur de l'océan",
-  "unfilled_countries": "Pays non séléctionnés",
-  "selected_countries": "Pays sélectionnés",
-  "borders": "Frontières",
-  "search_countries": "Rechercher des pays",
-  "unfilled_flag": "Remplir les pays non sélectionnés par leur drapeau",
-  "filled_flag": "Remplir les pays sélectionnés par leur drapeau"
+  }
 }
