--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -80,6 +80,16 @@
     "collapsible_content_title": "Collapsible content",
     "complementary_products": "Complementary products"
   },
+  "colors": "Colors",
+  "ocean_color": "Ocean color",
+  "unfilled_flag": "Unfilled flag",
+  "unfilled_countries": "Unfilled countries",
+  "filled_flag": "Filled flag",
+  "selected_countries": "Selected countries",
+  "borders": "Borders",
+  "countries": "Countries",
+  "search_countries": "Search countries",
+  "unselect_all": "Unselect all",
   "blogs": {
     "article": {
       "blog": "Blog",
@@ -129,6 +139,7 @@
         "play_model": "Play 3D Viewer",
         "play_video": "Play video"
       },
+      "nested_label": "{{ title }} for {{ parent_title }}",
       "quantity": {
         "label": "Quantity",
         "input_label": "Quantity for {{ product }}",
@@ -140,6 +151,7 @@
         "min_of": "Min {{ quantity }}",
         "max_of": "Max {{ quantity }}",
         "in_cart_html": "<span class=\"quantity-cart\">{{ quantity }}</span> in cart",
+        "in_cart_aria_label": "Quantity ({{ quantity }} in cart)",
         "note": "View quantity rules"
       },
       "volume_pricing": {
@@ -525,15 +537,5 @@
       "send_on": "YYYY-MM-DD",
       "send_on_label": "Send on (optional)"
     }
-  },
-  "colors": "Colors",
-  "countries": "Countries",
-  "unselect_all": "Unselect all",
-  "ocean_color": "Ocean color",
-  "unfilled_countries": "Unfilled countries",
-  "selected_countries": "Selected countries",
-  "borders": "Borders",
-  "search_countries": "Search countries",
-  "unfilled_flag": "Fill unselected countries with their flag",
-  "filled_flag": "Fill selected countries with their flag"
+  }
 }
