feat: Enhance flag management and update translations for selected countries

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -82,9 +82,9 @@
   },
   "colors": "Couleurs",
   "ocean_color": "Couleur de l'océan",
-  "unfilled_flag": "Drapeau non rempli",
-  "unfilled_countries": "Pays non remplis",
-  "filled_flag": "Drapeau rempli",
+  "unfilled_flag": "Remplir les pays non sélectionnés par leur drapeau",
+  "unfilled_countries": "Pays non séléctionnés",
+  "filled_flag": "Remplir les pays sélectionnés par leur drapeau",
   "selected_countries": "Pays sélectionnés",
   "borders": "Bordures",
   "countries": "Pays",
